--- a/Week1/TTT.ipynb
+++ b/Week1/TTT.ipynb
@@ -1,19 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TicTacToe:\n",
-    "    def __init__(self):\n",
-    "        self.board = [\" \" for _ in range(9)]\n",
-    "        self.current_winner = None\n",
-    "        \n",
-    "    def print_board(self):\n",
-    "        for row in [self.board[i * 3:(i + 1) * 3] for i in range(3)]:\n",
-    "            print(\"| \" + \" | \".join(row) + \" |\")"
+    "import random"
    ]
   },
   {
@@ -21,7 +21,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class TicTacToe:\n",
+    "    def __init__(self):\n",
+    "        self.board = [\" \" for _ in range(9)]\n",
+    "        self.current_winner = None\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.board = [\" \" for _ in range(9)]\n",
+    "        self.current_winner = None        \n",
+    "\n",
+    "    def print_board(self):\n",
+    "        print(\"   0   1   2\")\n",
+    "        for i in range(3):\n",
+    "            row = self.board[i*3:(i+1)*3]\n",
+    "            # print(row)\n",
+    "            print(f\"{i} | {row[0]} | {row[1]} | {row[2]} |\")\n",
+    "            if i < 2:\n",
+    "                print(\"  ---+---+---\")\n",
+    "\n",
+    "    def move(self, square, letter):\n",
+    "        if self.board[square] == \" \":\n",
+    "            self.board[square] = letter\n",
+    "            if self.check_winner(square, letter):\n",
+    "                self.current_winner = letter\n",
+    "            return True\n",
+    "        return False\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
