--- a/Week1/TTT.ipynb
+++ b/Week1/TTT.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,55 @@
     "                self.current_winner = letter\n",
     "            return True\n",
     "        return False\n",
-    "    "
+    "    \n",
+    "    def check_winner(self, square, letter):\n",
+    "        row_ind = square // 3\n",
+    "        row = self.board[row_ind * 3:(row_ind + 1) * 3]\n",
+    "        if all([s == letter for s in row]):\n",
+    "            return True     \n",
+    "\n",
+    "        col_ind = square % 3\n",
+    "        col = [self.board[col_ind + i * 3] for i in range(3)]\n",
+    "        if all([s == letter for s in col]):\n",
+    "            return True\n",
+    "\n",
+    "        if square % 2 == 0:\n",
+    "            diag1 = [self.board[i] for i in [0, 4, 8]]\n",
+    "            if all([s == letter for s in diag1]):\n",
+    "                return True\n",
+    "\n",
+    "            diag2 = [self.board[i] for i in [2, 4, 6]]\n",
+    "            if all([s == letter for s in diag2]):\n",
+    "                return True\n",
+    "\n",
+    "        return False           \n",
+    "\n",
+    "\n",
+    "    def empty_squares(self):\n",
+    "        return \" \" in self.board\n",
+    "\n",
+    "    def available_moves(self):\n",
+    "        return [i for i, x in enumerate(self.board) if x == \" \"]\n",
+    "\n",
+    "    def is_full(self):\n",
+    "        return not self.empty_squares()\n",
+    "\n",
+    "    def check_draw(self):\n",
+    "        return self.is_full() and self.current_winner is None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RandomComputerPlayer:\n",
+    "    def __init__(self, letter):\n",
+    "        self.letter = letter\n",
+    "\n",
+    "    def get_move(self, game):\n",
+    "        return random.choice(game.available_moves())\n"
    ]
   }
  ],
