--- a/Week1/TTT.ipynb
+++ b/Week1/TTT.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,30 +29,29 @@
     "\n",
     "    def reset(self):\n",
     "        self.board = [\" \" for _ in range(9)]\n",
-    "        self.current_winner = None        \n",
+    "        self.current_winner = None\n",
     "\n",
     "    def print_board(self):\n",
     "        print(\"   0   1   2\")\n",
     "        for i in range(3):\n",
-    "            row = self.board[i*3:(i+1)*3]\n",
-    "            # print(row)\n",
+    "            row = self.board[i * 3:(i + 1) * 3]\n",
     "            print(f\"{i} | {row[0]} | {row[1]} | {row[2]} |\")\n",
     "            if i < 2:\n",
     "                print(\"  ---+---+---\")\n",
     "\n",
-    "    def move(self, square, letter):\n",
+    "    def make_move(self, square, letter):\n",
     "        if self.board[square] == \" \":\n",
     "            self.board[square] = letter\n",
     "            if self.check_winner(square, letter):\n",
     "                self.current_winner = letter\n",
     "            return True\n",
     "        return False\n",
-    "    \n",
+    "\n",
     "    def check_winner(self, square, letter):\n",
     "        row_ind = square // 3\n",
     "        row = self.board[row_ind * 3:(row_ind + 1) * 3]\n",
     "        if all([s == letter for s in row]):\n",
-    "            return True     \n",
+    "            return True\n",
     "\n",
     "        col_ind = square % 3\n",
     "        col = [self.board[col_ind + i * 3] for i in range(3)]\n",
@@ -68,8 +67,7 @@
     "            if all([s == letter for s in diag2]):\n",
     "                return True\n",
     "\n",
-    "        return False           \n",
-    "\n",
+    "        return False\n",
     "\n",
     "    def empty_squares(self):\n",
     "        return \" \" in self.board\n",
@@ -86,7 +84,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HumanPlayer:\n",
+    "    def __init__(self, letter):\n",
+    "        self.letter = letter\n",
+    "\n",
+    "    def get_move(self, game):\n",
+    "        valid_square = False\n",
+    "        val = None\n",
+    "        while not valid_square:\n",
+    "            square = input(f\"{self.letter}'s turn. Input move as 'row,col' (e.g., 1,2): \")\n",
+    "            try:\n",
+    "                row, col = map(int, square.split(','))\n",
+    "                val = row * 3 + col\n",
+    "                if val not in game.available_moves():\n",
+    "                    raise ValueError\n",
+    "                valid_square = True\n",
+    "            except (ValueError, IndexError):\n",
+    "                print(\"Invalid input. Please enter row and column as 'row,col' where row and col are between 0 and 2.\")\n",
+    "        return val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +120,103 @@
     "\n",
     "    def get_move(self, game):\n",
     "        return random.choice(game.available_moves())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class UnbeatableComputerPlayer:\n",
+    "    def __init__(self, letter):\n",
+    "        self.letter = letter\n",
+    "\n",
+    "    def minimax(self, state, depth, maximizing_player):\n",
+    "        opponent = \"O\" if self.letter == \"X\" else \"X\"\n",
+    "        if state.current_winner == self.letter:\n",
+    "            return 1\n",
+    "        elif state.current_winner == opponent:\n",
+    "            return -1\n",
+    "        elif state.check_draw():\n",
+    "            return 0\n",
+    "\n",
+    "        if maximizing_player:\n",
+    "            max_eval = float('-inf')\n",
+    "            for move in state.available_moves():\n",
+    "                state.make_move(move, self.letter)\n",
+    "                eval = self.minimax(state, depth + 1, False)\n",
+    "                state.board[move] = \" \"\n",
+    "                state.current_winner = None\n",
+    "                max_eval = max(max_eval, eval)\n",
+    "            return max_eval\n",
+    "        else:\n",
+    "            min_eval = float('inf')\n",
+    "            for move in state.available_moves():\n",
+    "                state.make_move(move, opponent)\n",
+    "                eval = self.minimax(state, depth + 1, True)\n",
+    "                state.board[move] = \" \"\n",
+    "                state.current_winner = None\n",
+    "                min_eval = min(min_eval, eval)\n",
+    "            return min_eval\n",
+    "\n",
+    "    def get_move(self, game):\n",
+    "        best_score = float('-inf')\n",
+    "        best_move = None\n",
+    "        for move in game.available_moves():\n",
+    "            game.make_move(move, self.letter)\n",
+    "            score = self.minimax(game, 0, False)\n",
+    "            game.board[move] = \" \"\n",
+    "            game.current_winner = None\n",
+    "            if score > best_score:\n",
+    "                best_score = score\n",
+    "                best_move = move\n",
+    "        return best_move\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0   1   2\n",
+      "0 |   |   |   |\n",
+      "  ---+---+---\n",
+      "1 |   |   |   |\n",
+      "  ---+---+---\n",
+      "2 |   |   |   |\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Play a human-vs-unbeatable-computer game\n",
+    "def play_game_human_vs_unbeatable_computer():\n",
+    "    game = TicTacToe()\n",
+    "    human = HumanPlayer(\"X\")\n",
+    "    computer = UnbeatableComputerPlayer(\"O\")\n",
+    "\n",
+    "    game.print_board()\n",
+    "\n",
+    "    while game.empty_squares():\n",
+    "        for player in [human, computer]:\n",
+    "            move = player.get_move(game)\n",
+    "            if game.make_move(move, player.letter):\n",
+    "                game.print_board()\n",
+    "                if game.current_winner:\n",
+    "                    print(f\"{player.letter} wins!\")\n",
+    "                    return\n",
+    "                elif game.check_draw():\n",
+    "                    print(\"It's a draw!\")\n",
+    "                    return\n",
+    "\n",
+    "# Uncomment the desired function to play\n",
+    "# play_game_human_vs_human()\n",
+    "# play_game_human_vs_computer()\n",
+    "play_game_human_vs_unbeatable_computer()"
    ]
   }
  ],
