--- a/Week1/TTT.ipynb
+++ b/Week1/TTT.ipynb
@@ -4,12 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing Libraries"
+    "## Question1\n",
+    "- The autonomous machines refer to systems that make and execute decisions on their own without the help from a human. These machines incorporate sensors, actuators, and processors that make it possible for them to perceive their environment, analyze the data, and act on it. These machines range from simple automated devices to complex systems capable of adapting to dynamic environments. For example, a self driving car can interpret data received from sensors in order to steer the car.  A robotic vacuum cleaner performs cleaning by detecting obstacles and efficiently mapping out the room to be cleaned. Advanced autonomous machines stem from fields like robotics, artificial intelligence, and machine learning which enhances their ability to improve over time as the technology improves. However, after their creation, many ethical concerns arose such as how it would affect humans economically and what regulations would need to exist to govern their use for safety and accountability.\n",
+    "\n",
+    "- **references**: \n",
+    "https://www.allaboutai.com/ai-glossary/autonomous-robot/?utm_source=chatgpt.com\n",
+    "\n",
+    "- An autonomy, for example autonomous drone, should be able to learn from the environment, etc using sensors, to solve unforeseen challenges and optimize its performance. For instance, a delivery drone that learns to recognize and navigate around new obstacles, such as temporary construction sites or adverse weather conditions, will perform more effectively than one that strictly follows predetermined routes without adjustment.\n",
+    "\n",
+    "- **references**: \n",
+    "https://people.engr.tamu.edu/guni/csce421/files/AI_Russell_Norvig.pdf\n",
+    "\n",
+    "## Question2a\n",
+    "\n",
+    "- Like Eliza, these classical AI options based on decision trees exhibit certain strengths and weaknesses. To begin with, they are easy to use and operate efficiently, and also has high explainabiltiy that AI still needs to improve in this. Next, their design path is simple, making it easy for the developers to follow and change the path as necessary. Lastly, these trees are cost effective when it comes to needed computational power, meaning that they are great for devices with low processing power. These approach also have unreal and noteworthy weaknesses. One, their adaptability is limited, mostly because they cannot learn from new data and have to be updated manually. Two, these approaches are inflexible and rigid in structure leading an AI system to struggle and respond inappropriately to complex and unknown inputs. In other words, they overly exhibit inflexible attributes. Three, these AI systems do not possess any understanding not using any form of artificial intelligence except for algorithms leading to surface level conversations. In general, while classical decision tree based AI systems serve some purpose their restraints limit them from more intelligent and dynamic actions.\n",
+    "\n",
+    "## Question2b\n",
+    "\n",
+    "- The signal processing, adaptive filters, and supervised as well as unsupervised machine learning are the basic elements or foundation of artificial intelligence. AI systems process raw feeds from different sources including text and transform them into usable data which is very important in image and speech recognition. Also, the AI trained with adaptive filters transform over time as new data patterns emerge and learn to operate in new environments. For example, in a CNNs model, it borrows the idea of convoluation in signal processing and build the model with different layers of adptive filters. Supervised learning enables training an AI with labeled data which usually accurate in certain types predictions and classifications. The opposite is the unsupervised learning in which the model is able to recognize patterns and structures of the dataste without the help of the labeled data. All these functions combined enhance AI capabilities and improve its classification, interpolation, and extraction of information from noisy data, thus facilitating intelligent decision-making and problem-solving in numerous applications. With these data-centric methods make AI become reliable, versatile, and able to solve complicated problems in the real world. However, there is still a lot of researchs and works on explainable AI and reasoning which make AI becomes even more reliable.\n",
+    "\n",
+    "## Question2c\n",
+    "\n",
+    "- While control theory, AI, and data science are important fields in the development of autonomous systems, they use different approach towards the task although the idea behind them look similar. They do have in common boundary and target outcomes which fore feedback mechanisms and system modeling. An example of that is both control theory and A1 use system outputs as a reference for performance improvement.\n",
+    "\n",
+    "These fields differ by their methods of approach. Control theory is model-based, which means that the focus is on building accurate mathematical models to guarantee system stability and real-time responses in constantly changing environments. The math behind control therory relies heavily on transformation between time and frequency domain. On the other hand, AI as well as data science are probabilistic since they are data driven, and have large models which need to learn patterns in high dimensional complex spaces without equations of the system to describe them. The math behind AI and data science is mainly on probability and vector calculus.\n",
+    "\n",
+    "This means that control theory will attempt to function inside the given system definitions and constraints, optimizing the performance at that level. AI and data science, on the other hand, tend to allow the autonomous systems to change depending on the data fed into them. Sensor fusion of control theory with AI and data science can increase the effectiveness of autonomous systems by blending the controllability and maintainability of the control techniques with the flexibility and intelligence of the data-driven approaches."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +49,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TicTacToe Class\n",
+    "\n",
+    "- **`reset()`**: Resets the board and winner.\n",
+    "- **`print_board()`**: Displays the board.\n",
+    "- **`make_move(square, letter)`**: Places a marker (`X` or `O`) on the board if valid and checks for a winner.\n",
+    "- **`check_winner(square, letter)`**: Checks if the given player has won after their move.\n",
+    "- **`empty_squares()`**: Returns `True` if there are empty spaces on the board.\n",
+    "- **`available_moves()`**: Lists all valid moves.\n",
+    "- **`is_full()`**: Checks if the board is full.\n",
+    "- **`check_draw()`**: Returns `True` if the game is a draw (full board, no winner)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +131,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HumanPlayer Class\n",
+    "\n",
+    "- **`get_move(game)`**: \n",
+    "  - Prompts the player to input their move as `row,col` (e.g., `1,2`).\n",
+    "  - Validates the move to ensure it corresponds to an available square on the board.\n",
+    "  - Returns the valid move as a board index."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,8 +169,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RandomComputerPlayer Class\n",
+    "\n",
+    "- **`get_move(game)`**: \n",
+    "  - Randomly selects a move from the available squares on the board.\n",
+    "  - Uses `random.choice()` to ensure the move is valid."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,8 +194,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Minimax Algorithm\n",
+    "- **Goal**: Simulate all possible game outcomes and select the best move for the computer.\n",
+    "- **Parameters**:\n",
+    "  - `state`: Current game state.\n",
+    "  - `depth`: Depth of recursion.\n",
+    "  - `maximizing_player`: True for the computer's turn; False for the opponent's turn.\n",
+    "\n",
+    "- **Base Cases**:\n",
+    "  - Return `1` if the computer wins, `-1` if the opponent wins, or `0` for a draw.\n",
+    "\n",
+    "- **Logic**:\n",
+    "  - **Maximizing Player**:\n",
+    "    - Try all moves, simulate outcomes, and return the maximum evaluation score.\n",
+    "  - **Minimizing Player**:\n",
+    "    - Simulate opponent's moves and return the minimum evaluation score.\n",
+    "\n",
+    "- **Reference**: https://github.com/Cledersonbc/tic-tac-toe-minimax\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `get_move(game)`\n",
+    "- Iterates over all valid moves.\n",
+    "- Uses `minimax` to calculate the score of each move.\n",
+    "- Tracks the move with the highest score and returns it.\n",
+    "\n",
+    "\n",
+    "## Key Features\n",
+    "1. **Exploit a Win**: Takes winning moves immediately.\n",
+    "2. **Prevent a Loss**: Blocks the opponent's winning moves.\n",
+    "3. **Strategic Play**: Evaluates moves to maximize future winning chances.\n",
+    "\n",
+    "\n",
+    "## How It Works\n",
+    "1. Simulate each move on the board.\n",
+    "2. Recursively explore all outcomes using `minimax`.\n",
+    "3. Undo moves after evaluation (backtracking).\n",
+    "4. Return the move with the best score.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,8 +292,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `play_game_human_vs_human` Function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def play_game_human_vs_human():\n",
+    "    game = TicTacToe()\n",
+    "    human1 = HumanPlayer(\"X\")\n",
+    "    human2 = HumanPlayer(\"O\")\n",
+    "\n",
+    "    game.print_board()\n",
+    "\n",
+    "    while game.empty_squares():\n",
+    "        for player in [human1, human2]:\n",
+    "            move = player.get_move(game)\n",
+    "            if game.make_move(move, player.letter):\n",
+    "                game.print_board()\n",
+    "                if game.current_winner:\n",
+    "                    print(f\"{player.letter} wins!\")\n",
+    "                    return\n",
+    "                elif game.check_draw():\n",
+    "                    print(\"It's a draw!\")\n",
+    "                    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -188,12 +338,65 @@
       "  ---+---+---\n",
       "1 |   |   |   |\n",
       "  ---+---+---\n",
-      "2 |   |   |   |\n"
+      "2 |   |   |   |\n",
+      "   0   1   2\n",
+      "0 | X |   |   |\n",
+      "  ---+---+---\n",
+      "1 |   |   |   |\n",
+      "  ---+---+---\n",
+      "2 |   |   |   |\n",
+      "   0   1   2\n",
+      "0 | X | O |   |\n",
+      "  ---+---+---\n",
+      "1 |   |   |   |\n",
+      "  ---+---+---\n",
+      "2 |   |   |   |\n",
+      "   0   1   2\n",
+      "0 | X | O |   |\n",
+      "  ---+---+---\n",
+      "1 | X |   |   |\n",
+      "  ---+---+---\n",
+      "2 |   |   |   |\n",
+      "   0   1   2\n",
+      "0 | X | O |   |\n",
+      "  ---+---+---\n",
+      "1 | X | O |   |\n",
+      "  ---+---+---\n",
+      "2 |   |   |   |\n",
+      "Invalid input. Please enter row and column as 'row,col' where row and col are between 0 and 2.\n",
+      "   0   1   2\n",
+      "0 | X | O | X |\n",
+      "  ---+---+---\n",
+      "1 | X | O |   |\n",
+      "  ---+---+---\n",
+      "2 |   |   |   |\n",
+      "   0   1   2\n",
+      "0 | X | O | X |\n",
+      "  ---+---+---\n",
+      "1 | X | O |   |\n",
+      "  ---+---+---\n",
+      "2 |   | O |   |\n",
+      "O wins!\n"
      ]
     }
    ],
    "source": [
-    "# Play a human-vs-unbeatable-computer game\n",
+    "play_game_human_vs_human()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `play_game_human_vs_unbeatable_computer` Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def play_game_human_vs_unbeatable_computer():\n",
     "    game = TicTacToe()\n",
     "    human = HumanPlayer(\"X\")\n",
@@ -211,12 +414,99 @@
     "                    return\n",
     "                elif game.check_draw():\n",
     "                    print(\"It's a draw!\")\n",
-    "                    return\n",
-    "\n",
-    "# Uncomment the desired function to play\n",
-    "# play_game_human_vs_human()\n",
-    "# play_game_human_vs_computer()\n",
+    "                    return\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## X is the human player and 0 is the unbeatalbe computer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0   1   2\n",
+      "0 |   |   |   |\n",
+      "  ---+---+---\n",
+      "1 |   |   |   |\n",
+      "  ---+---+---\n",
+      "2 |   |   |   |\n",
+      "   0   1   2\n",
+      "0 | X |   |   |\n",
+      "  ---+---+---\n",
+      "1 |   |   |   |\n",
+      "  ---+---+---\n",
+      "2 |   |   |   |\n",
+      "   0   1   2\n",
+      "0 | X |   |   |\n",
+      "  ---+---+---\n",
+      "1 |   | O |   |\n",
+      "  ---+---+---\n",
+      "2 |   |   |   |\n",
+      "   0   1   2\n",
+      "0 | X | X |   |\n",
+      "  ---+---+---\n",
+      "1 |   | O |   |\n",
+      "  ---+---+---\n",
+      "2 |   |   |   |\n",
+      "   0   1   2\n",
+      "0 | X | X | O |\n",
+      "  ---+---+---\n",
+      "1 |   | O |   |\n",
+      "  ---+---+---\n",
+      "2 |   |   |   |\n",
+      "Invalid input. Please enter row and column as 'row,col' where row and col are between 0 and 2.\n",
+      "   0   1   2\n",
+      "0 | X | X | O |\n",
+      "  ---+---+---\n",
+      "1 |   | O |   |\n",
+      "  ---+---+---\n",
+      "2 | X |   |   |\n",
+      "   0   1   2\n",
+      "0 | X | X | O |\n",
+      "  ---+---+---\n",
+      "1 | O | O |   |\n",
+      "  ---+---+---\n",
+      "2 | X |   |   |\n",
+      "   0   1   2\n",
+      "0 | X | X | O |\n",
+      "  ---+---+---\n",
+      "1 | O | O | X |\n",
+      "  ---+---+---\n",
+      "2 | X |   |   |\n",
+      "   0   1   2\n",
+      "0 | X | X | O |\n",
+      "  ---+---+---\n",
+      "1 | O | O | X |\n",
+      "  ---+---+---\n",
+      "2 | X | O |   |\n",
+      "   0   1   2\n",
+      "0 | X | X | O |\n",
+      "  ---+---+---\n",
+      "1 | O | O | X |\n",
+      "  ---+---+---\n",
+      "2 | X | O | X |\n",
+      "It's a draw!\n"
+     ]
+    }
+   ],
+   "source": [
     "play_game_human_vs_unbeatable_computer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An unbeatable computer player this class would create by making use of the minimax method, which goes recursively through all game outcomes by simulating moves and testing win/loss/draw conditions, alternating between maximising the chances for computer and minimising them for an opponent. The method available_moves() returns the space of possible actions and then tests valid moves to find the best. All feedback such as move-making or updating the game states is inherently taken care of by the TicTacToe class, which is meant to manage board interaction and win or draw checks. Likewise, the very tightly connected and acting code in minimax would allow playing perfectly without needing explicit helper methods, though some conceptual things, such as simulating moves or evaluating outcomes, lie buried in the recursiveness."
    ]
   }
  ],
